z-index fix!
git-svn-id: https://plugins.svn.wordpress.org/sexy-contact-form/tags/0.9.4@952492 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/includes/css/main.css
+++ b/includes/css/main.css
@@ -209,6 +209,6 @@
 	box-sizing:border-box !important;
 	-moz-box-sizing:border-box !important; /* Firefox */
 	-webkit-box-sizing:border-box !important;
-	z-index: 999;
+	z-index: 10000;
 \
 }
